syntax = "proto3";

package pku.driver.v1;

import "google/protobuf/empty.proto";

service PkuDriver {
  rpc CheckConnection(google.protobuf.Empty) returns (StandardResponse);
  // Статус железки: читает основную информацию пульта; success=true, если
  // ответ получен и без ошибок (пульт доступен), иначе false + причина.
  rpc GetHardwareStatus(google.protobuf.Empty) returns (StandardResponse);
  // Основная информация пульта (0x0000): чтение блока 151 слово (сетевые
  // настройки + идентификация) и запись RW-полей одним пакетом.
  rpc ReadMainInfo(google.protobuf.Empty) returns (ReadMemoryResponse);
  rpc WriteMainInfo(WriteMainInfoRequest) returns (StandardResponse);
  // Приём ПКУ (0x3003_0000): чтение длительностей ПКУ (RO).
  rpc ReadPku(ReadPkuRequest) returns (ReadPkuResponse);
  // Настройка ПКУ (0x3003_0080): режим приёма каждого ПКУ (RW).
  rpc SetPkuMode(SetPkuModeRequest) returns (StandardResponse);
  // Выдача РК (0x3002): запись длительности по индексу.
  rpc SendRkByIndex(SendRkByIndexRequest) returns (StandardResponse);
  rpc GetVersion(google.protobuf.Empty) returns (VersionInfo);
}

message StandardResponse {
  bool success = 1;
  string error_message = 2;
}

// Ответ ReadMainInfo: сырые байты блока основной информации пульта (0x0000).
message ReadMemoryResponse {
  bool success = 1;
  string error_message = 2;
  bytes data = 3;
}

// rk_index — номер РК с 1 (РК1..РК48); адрес = 0x30020000 + (rk_index-1)*2.
// Имена РК — семантика конкретного изделия, поэтому живут в менеджере, а не в
// общем драйвере: драйвер работает только с индексами/адресами.
message SendRkByIndexRequest {
  uint32 rk_index = 1;
  uint32 duration_ms = 2;
  string operation_id = 3;
}

// Чтение длительностей ПКУ (0x3003_0000, RO). indices — произвольный список
// номеров ПКУ (каждый 1..64), без повторений. Драйвер читает диапазон
// [min..max] одним обменом MAP v5 и возвращает длительности РОВНО по
// запрошенным каналам в ТОМ ЖЕ порядке (durations_ms[i] = ПКУ indices[i]).
message ReadPkuRequest {
  repeated uint32 indices = 1;
  string operation_id = 2;
}

message ReadPkuResponse {
  bool success = 1;
  string error_message = 2;
  repeated uint32 durations_ms = 3;   // длительности в порядке indices
}

// Режим приёма ПКУ (0x3003_0080, RW). pku_index — номер ПКУ с 1 (1..64);
// mode: 0 — отрицательный импульс, 1 — положительный импульс, 2 — фронт.
message SetPkuModeRequest {
  uint32 pku_index = 1;
  uint32 mode = 2;
  string operation_id = 3;
}

// Запись основной информации пульта (0x0000, RW-поля одним пакетом, иначе
// незатронутые сотрутся — запись во FLASH). mac: "AA:BB:CC:DD:EE:FF";
// ip/netmask/gateway/dns: "a.b.c.d"; description — до 120 символов.
message WriteMainInfoRequest {
  string description = 1;
  string mac = 2;
  string ip = 3;
  string netmask = 4;
  string gateway = 5;
  string dns = 6;
  bool use_dhcp = 7;
  string operation_id = 8;
}

message VersionInfo {
  string version = 1;
}
